# time-tunes

./: LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json
.github/workflows/: rust.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  player.rs
src/css/: index.css  index.css.map  index.scss
