[package]
name = "src_tauri"
version = "0.2.3"
description = "Make the perfect playlist for any duration"
authors = ["Aria", "Slushee"]
repository = "https://github.com/lxbx44/time-tunes"
edition = "2021"

[dependencies]
lofty = "0.18.2"
rand = "0.8.5"
rayon = "1.8.1"
walkdir = "2.4.0"

# Tauri
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "fat"
strip = "debuginfo"
codegen-units = 1
